--- a/graphAlgorithmsVisualisation/package.json
+++ b/graphAlgorithmsVisualisation/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@swimlane/ngx-graph": "^7.2.0",
     "leader-line": "^1.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
