--- a/graphAlgorithmsVisualisation/package.json
+++ b/graphAlgorithmsVisualisation/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.1",
     "@swimlane/ngx-graph": "^7.2.0",
     "leader-line": "^1.0.5",
+    "queue-typescript": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
