--- a/graphAlgorithmsVisualisation/package.json
+++ b/graphAlgorithmsVisualisation/package.json
@@ -18,12 +18,17 @@
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
+    "@angular/localize": "~11.0.1",
     "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@swimlane/ngx-graph": "^7.2.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
     "leader-line": "^1.0.5",
+    "popper.js": "^1.16.1",
     "queue-typescript": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
