added context menu for nodes

--- a/graphAlgorithmsVisualisation/package.json
+++ b/graphAlgorithmsVisualisation/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "~11.0.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@swimlane/ngx-graph": "^7.2.0",
+    "angular-bootstrap-contextmenu": "^1.2.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "leader-line": "^1.0.5",
+    "ngx-contextmenu": "^5.4.0",
     "popper.js": "^1.16.1",
     "queue-typescript": "^1.0.1",
     "rxjs": "~6.6.0",
